tests/vdq-rta/should_fail/T22326_fail_top.hs
{-# LANGUAGE ExplicitNamespaces #-}
{-# LANGUAGE RequiredTypeArguments #-}

module T22326_fail_top where

xtop  = type Int