tests/vdq-rta/should_fail/T22326_fail_top.stderr
T22326_fail_top.hs:6:9: error: [GHC-35499]
    • Illegal keyword ‘type’
      Type syntax may only be used in a required type argument,
      i.e. to instantiate a visible forall.
    • In the expression: type Int
      In an equation for ‘xtop’: xtop = type Int

